--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,21 +24,25 @@ variables:
   GO_PROJECT_DIR: "services/metrics-gateway"
 
 .rust-change-paths: &rust_paths
-  - "**/*.rs"
-  - "**/build.rs"
-  - "**/Cargo.toml"
-  - "**/Cargo.lock"
-  - "rust-toolchain*"
-  - ".cargo/**/*"
-  - "Dockerfile"
-  - "Dockerfile.*"
-  - "*/Dockerfile"
-  - "docker/**/*"
+  - "services/raid-simulator/**/*.rs"
+  - "services/raid-simulator/**/Cargo.toml"
+  - "services/raid-simulator/**/Cargo.lock"
+  - "services/raid-simulator/**/build.rs"
+  - "services/raid-simulator/**/Dockerfile"
+  - "services/raid-simulator/**/Makefile"
+  - "services/raid-simulator/**/*.yml"
+  - "services/raid-simulator/**/*.yaml"
+  - "services/raid-simulator/**/*.json"
 
 .go-change-paths: &go_paths
   - "services/metrics-gateway/**/*.go"
   - "services/metrics-gateway/go.mod"
   - "services/metrics-gateway/go.sum"
+  - "services/metrics-gateway/**/Dockerfile"
+  - "services/metrics-gateway/**/Makefile"
+  - "services/metrics-gateway/**/*.yml"
+  - "services/metrics-gateway/**/*.yaml"
+  - "services/metrics-gateway/**/*.json"
 
 .runtime-image-change-paths: &runtime_image_paths
   - .gitlab/ci/images/rust-runtime/Dockerfile
@@ -187,38 +191,39 @@ include:
 
 workflow:
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+    - if: $CI_PIPELINE_SOURCE == "schedule"
       when: always
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: always
-    - if: '$CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS'
+    - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS
       when: never
-    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: $CI_COMMIT_BRANCH == "master"
       when: always
-    - if: '$CI_COMMIT_BRANCH == "develop"'
+    - if: $CI_COMMIT_BRANCH == "develop"
       when: always
-    - if: '$CI_COMMIT_BRANCH =~ /^feature\// && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"'
+    - if: $CI_COMMIT_BRANCH =~ /^feature\/.*$/ && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"
       changes:
         compare_to: "refs/heads/develop"
         paths: *rust_paths
       when: always
-    - if: '$CI_COMMIT_BRANCH =~ /^feature\// && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"'
+    - if: $CI_COMMIT_BRANCH =~ /^feature\/.*$/ && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"
       changes:
         compare_to: "refs/heads/develop"
         paths: *go_paths
       when: always
-    - if: '$CI_COMMIT_BRANCH =~ /^feature\// && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"'
+    - if: $CI_COMMIT_BRANCH =~ /^feature\/.*$/ && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"
       changes:
         compare_to: "refs/heads/develop"
         paths: *runtime_image_paths
       when: always
-    - if: '$CI_COMMIT_BRANCH =~ /^feature\// && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"'
+    - if: $CI_COMMIT_BRANCH =~ /^feature\/.*$/ && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"
       changes:
         compare_to: "refs/heads/develop"
         paths: *go_runtime_image_paths
       when: always
-    - if: '$CI_COMMIT_BRANCH =~ /^feature\// && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"'
+    - if: $CI_COMMIT_BRANCH =~ /^feature\/.*$/ && $CI_COMMIT_BEFORE_SHA == "0000000000000000000000000000000000000000"
       when: always
-    - if: '$CI_COMMIT_BRANCH =~ /^feature\//'
+    - if: $CI_COMMIT_BRANCH =~ /^feature\/.*$/
       when: always
     - when: never
+
