Clean pipelines & small fixes.

--- a/.gitlab/ci/metrics-gateway/jobs/quality.yml
+++ b/.gitlab/ci/metrics-gateway/jobs/quality.yml
@@ -1,3 +1,20 @@
+metrics-gateway-audit:
+  stage: quality
+  image:
+    name: $CI_GO_IMAGE
+    pull_policy: always
+  before_script:
+    - go version
+  script:
+    - .gitlab/ci/metrics-gateway/scripts/audit.sh
+  rules:
+    - !reference [.rules-master-always,        rules]
+    - !reference [.rules-mr-master-go-code,    rules]
+    - !reference [.rules-mr-develop-go-code,   rules]
+    - !reference [.rules-dev-go-code,          rules]
+    - !reference [.rules-feature-go-soft,      rules]
+    - when: never
+
 metrics-gateway-coverage:
   stage: quality
   needs:
@@ -15,9 +32,9 @@ metrics-gateway-coverage:
       - services/metrics-gateway/coverage.out
     expire_in: 1 week
   rules:
-    - !reference [.rules-master-always, rules]
-    - !reference [.rules-mr-master-go-code, rules]
-    - !reference [.rules-mr-develop-go-code, rules]
-    - !reference [.rules-dev-go-code, rules]
-    - !reference [.rules-feature-go-soft, rules]
+    - !reference [.rules-master-always,        rules]
+    - !reference [.rules-mr-master-go-code,    rules]
+    - !reference [.rules-mr-develop-go-code,   rules]
+    - !reference [.rules-dev-go-code,          rules]
+    - !reference [.rules-feature-go-soft,      rules]
     - when: never
