Fix permission errors.

--- a/.gitlab/ci/images/golang-runtime/Dockerfile
+++ b/.gitlab/ci/images/golang-runtime/Dockerfile
@@ -9,6 +9,7 @@ COPY setup.sh      /usr/local/bin/setup
 COPY entrypoint.sh /usr/local/bin/entrypoint
 
 RUN chmod +x /usr/local/bin/setup /usr/local/bin/entrypoint \
-    && /usr/local/bin/setup
+    && /usr/local/bin/setup \
+    && chown -R ci:ci /go
 
 ENTRYPOINT ["/usr/local/bin/entrypoint"]
