Implement gRPC connection.

--- a/infra/.env.example
+++ b/infra/.env.example
@@ -6,3 +6,6 @@ GRAFANA_CLOUD_PROM_USERNAME=<username>
 
 # API token with scope: set:alloy-data-write
 GRAFANA_CLOUD_PROM_PASSWORD=<api-token>
+
+# Shared secret fo authenticate the gRPC metrics stream
+GRPC_AUTH_TOKEN=<auth-token>
