--- a/services/metrics-gateway/Dockerfile
+++ b/services/metrics-gateway/Dockerfile
@@ -1,19 +1,32 @@
 FROM golang:1.25 AS build
 
-WORKDIR /app
+WORKDIR /src
 
-COPY go.mod go.sum ./
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    protobuf-compiler \
+    libprotobuf-dev \
+    ca-certificates \
+  && rm -rf /var/lib/apt/lists/*
+
+ARG PROTOC_GEN_GO_VERSION=v1.36.6
+ARG PROTOC_GEN_GO_GRPC_VERSION=v1.5.1
+
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@${PROTOC_GEN_GO_VERSION} \
+ && go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@${PROTOC_GEN_GO_GRPC_VERSION}
+
+COPY proto ./proto
+COPY services/metrics-gateway ./services/metrics-gateway
+
+WORKDIR /src/services/metrics-gateway
 RUN go mod download
 
-COPY . .
+RUN chmod +x ./scripts/gen-proto.sh && ./scripts/gen-proto.sh
 
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o metrics-gateway ./cmd/metrics-gateway
 
-FROM gcr.io/distroless/base-debian12
-
+FROM gcr.io/distroless/base-debian12:nonroot
 WORKDIR /app
-COPY --from=build /app/metrics-gateway /app/metrics-gateway
+COPY --from=build /src/services/metrics-gateway/metrics-gateway /app/metrics-gateway
 
 EXPOSE 8080
-
 ENTRYPOINT ["/app/metrics-gateway"]
