--- a/services/raid-simulator/crates/raid-cli/Cargo.toml
+++ b/services/raid-simulator/crates/raid-cli/Cargo.toml
@@ -2,5 +2,31 @@
 name = "raid-cli"
 version = "0.1.0"
 edition = "2024"
+build = "build.rs"
 
 [dependencies]
+anyhow = "1"
+clap = { version = "4", features = ["derive", "env"] }
+
+http = "1.4.0"
+
+rand = "0.9.2"
+rand_distr = "0.5.1"
+
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "net"] }
+tokio-stream = { version = "0.1", features = ["sync"] }
+
+tonic = { version = "0.14.2", features = ["transport"] }
+tonic-prost = "0.14.2"
+
+prost = "0.14.1"
+prost-types = "0.14.1"
+
+hyper-util = { version = "0.1", features = ["tokio"] }
+tower = { version = "0.5.2", features = ["util"] }
+
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+[build-dependencies]
+tonic-prost-build = "0.14.2"
