--- a/services/raid-simulator/crates/raid-cli/Cargo.toml
+++ b/services/raid-simulator/crates/raid-cli/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
+clap = { version = "4.5.48", features = ["derive"] }
+fuser = "0.16.0"
+libc = "0.2.176"
+raid-rs = { path = "../raid-rs" }
