Refactors raid-cli crate for better structure
Refactors the raid-cli crate to improve code organization and clarity.

This commit introduces several changes:
- Updates crate metadata in `Cargo.toml` for better discoverability and documentation.
- Adds a README.md file.
- Moves file system-related modules into a dedicated `fs` module.
- Adjusts visibility modifiers (pub/crate) to enforce encapsulation where appropriate.
- Removes redundant code.
- Improves code readability with minor code improvements.

--- a/services/raid-simulator/crates/raid-cli/Cargo.toml
+++ b/services/raid-simulator/crates/raid-cli/Cargo.toml
@@ -2,6 +2,12 @@
 name = "raid-cli"
 version = "0.1.0"
 edition = "2024"
+description = "Command-line RAID simulator"
+license = "MIT"
+repository = "https://github.com/Stripe-Slinger/Stripe-Slinger"
+readme = "README.md"
+keywords = ["raid", "storage", "cli", "simulator"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 anyhow = "1.0.100"
