--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,58 +1,110 @@
 services:
-  raid-simulator:
-    build:
-      context: ../services/raid-simulator
-      dockerfile: Dockerfile
-    image: raid-simulator:latest
-    container_name: raid-simulator
+  init-sockets:
+    image: busybox:1.36
+    container_name: init-sockets
+    user: "0:0"
+    command:
+      - sh
+      - -euxc
+      - |
+        mkdir -p /sockets
+        chmod 0770 /sockets
+        chown 65532:65532 /sockets
+    volumes:
+      - metrics-sockets:/sockets
+    restart: "no"
 
   metrics-gateway:
     build:
-      context: ../services/metrics-gateway
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: services/metrics-gateway/Dockerfile
     image: metrics-gateway:latest
     container_name: metrics-gateway
-    environment:
-      - METRICS_PORT=8080
-    ports:
-      - "8083:8080"
     depends_on:
-      - raid-simulator
+      - init-sockets
+    user: "65532:65532"
+    environment:
+      - GRPC_AUTH_ENABLED=true
+      - GRPC_AUTH_TOKEN=${GRPC_AUTH_TOKEN}
+      - GRPC_SOCKET_PATH=/sockets/metrics-gateway.sock
+      - GRPC_SOCKET_MODE=0660
+      - METRICS_HTTP_ADDR=:8080
+    volumes:
+      - metrics-sockets:/sockets
+    restart: unless-stopped
+
+  raid-simulator:
+    build:
+      context: ..
+      dockerfile: services/raid-simulator/Dockerfile
+    image: raid-simulator:latest
+    container_name: raid-simulator
+    depends_on:
+      - init-sockets
+      - metrics-gateway
+
+    devices:
+      - /dev/fuse:/dev/fuse
+    cap_add:
+      - SYS_ADMIN
+    security_opt:
+      - apparmor:unconfined
+
+    environment:
+      - METRICS_SOCKET_PATH=/sockets/metrics-gateway.sock
+      - METRICS_AUTH_TOKEN=${GRPC_AUTH_TOKEN}
+
+    volumes:
+      - metrics-sockets:/sockets
+      - raid-disks:/disks
+      - raid-mount:/mnt/raid
+
+    command:
+      - fuse
+      - --mount-point
+      - /mnt/raid
+      - --disk-dir
+      - /disks
+      - --raid
+      - raid3
+      - --disk-size
+      - "10000000"
+
+    restart: unless-stopped
 
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor:v0.47.2
+    image: gcr.io/cadvisor/cadvisor:v0.55.1
     container_name: cadvisor
+    privileged: true
     ports:
       - "8081:8080"
-    privileged: true
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
       - /dev/disk/:/dev/disk:ro
+    command:
+      - --docker_only=true
+      - --disable_metrics=disk,diskIO,referenced_memory,memory_numa,process
+    restart: unless-stopped
 
   grafana-alloy:
     image: grafana/alloy:latest
     container_name: grafana-alloy
-    depends_on:
-      - metrics-gateway
-      - cadvisor
     volumes:
       - ./config.alloy:/etc/alloy/config.alloy:ro
       - ./alloy-data:/var/lib/alloy
-    environment:
-      GRAFANA_CLOUD_PROM_URL: ${GRAFANA_CLOUD_PROM_URL}
-      GRAFANA_CLOUD_PROM_USERNAME: ${GRAFANA_CLOUD_PROM_USERNAME}
-      GRAFANA_CLOUD_PROM_PASSWORD: ${GRAFANA_CLOUD_PROM_PASSWORD}
+    env_file:
+      - ./.env
     command:
       - run
-      - --server.http.listen-addr=0.0.0.0:12345
-      - --storage.path=/var/lib/alloy
       - /etc/alloy/config.alloy
-    ports:
-      - "8082:12345"
+      - --server.http.listen-addr=0.0.0.0:12345
+    restart: unless-stopped
 
-networks:
-  default:
-    name: stripe-slinger
+volumes:
+  metrics-sockets:
+  raid-disks:
+  raid-mount:
+  alloy-data:
