--- a/services/raid-simulator/.env.example
+++ b/services/raid-simulator/.env.example
@@ -1,4 +1,5 @@
 # Shared secret to authenticate the gRPC metrics stream between simulator and gateway
+METRICS_AUTH_TOKEN=<auth-token>
 GRPC_AUTH_TOKEN=<auth-token>
 
 # Username for the SMB network share
