--- a/.gitignore
+++ b/.gitignore
@@ -1,110 +1,80 @@
-# Covers JetBrains IDEs: IntelliJ, GoLand, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# ==============================================================================
+# STRIPE-SLINGER CENTRAL GITIGNORE
+# ==============================================================================
 
-# User-specific stuff
-**/.idea/**/workspace.xml
-**/.idea/**/tasks.xml
-**/.idea/**/usage.statistics.xml
-**/.idea/**/dictionaries
-**/.idea/**/shelf
+# ------------------------------------------------------------------------------
+# TERRAFORM (Security & Infrastructure)
+# ------------------------------------------------------------------------------
+# Local terraform directory containing binary plugins
+**/.terraform/
 
-# AWS User-specific
-**/.idea/**/aws.xml
+# State files (contains sensitive plain-text data)
+*.tfstate
+*.tfstate.*
 
-# Generated files
-**/.idea/**/contentModel.xml
+# Secret variables (API keys, tokens, etc.)
+*.tfvars
+*.tfvars.json
 
-# Sensitive or high-churn files
-**/.idea/**/dataSources/
-**/.idea/**/dataSources.ids
-**/.idea/**/dataSources.local.xml
-**/.idea/**/sqlDataSources.xml
-**/.idea/**/dynamic.xml
-**/.idea/**/uiDesigner.xml
-**/.idea/**/dbnavigator.xml
+# Terraform crash logs
+*.terraform.crashdump
 
-# Gradle
-**/.idea/**/gradle.xml
-**/.idea/**/libraries
+# Dependency lock file (Uncomment if you prefer not to track provider versions)
+# terraform.lock.hcl
 
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# **/.idea/artifacts
-# **/.idea/compiler.xml
-# **/.idea/jarRepositories.xml
-# **/.idea/modules.xml
-# **/.idea/*.iml
-# **/.idea/modules
-# *.iml
-# *.ipr
+# ------------------------------------------------------------------------------
+# STORAGE & SIMULATION DATA
+# ------------------------------------------------------------------------------
+# Ignore all simulation data, virtual disks, and mount points
+storage/**/*
 
-# CMake
-cmake-build-*/
+# Exceptions: keep .gitkeep files to ensure directory structure is tracked
+!storage/**/.gitkeep
 
-# Mongo Explorer plugin
-**/.idea/**/mongoSettings.xml
+# ------------------------------------------------------------------------------
+# LANGUAGES & RUNTIMES
+# ------------------------------------------------------------------------------
 
-# File-based project format
+### Rust (Cargo) ###
+target/
+debug/
+**/*.rs.bk
+*.pdb
+**/mutants.out*/
+
+### Go ###
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
+go.work.sum
+
+# ------------------------------------------------------------------------------
+# IDEs & EDITORS
+# ------------------------------------------------------------------------------
+
+### JetBrains (IntelliJ, GoLand, etc.) ###
+.idea/
 *.iws
-
-# IntelliJ
 out/
 
-# mpeltonen/sbt-idea plugin
-**/.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Cursive Clojure plugin
-**/.idea/replstate.xml
-
-# SonarLint plugin
-**/.idea/sonarlint/
-**/.idea/sonarlint.xml # see https://community.sonarsource.com/t/is-the-file-idea-idea-idea-sonarlint-xml-intended-to-be-under-source-control/121119
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-
-# Editor-based HTTP Client
-**/.idea/httpRequests
-http-client.private.env.json
-
-# Android studio 3.1+ serialized cache file
-**/.idea/caches/build_file_checksums.ser
-
-# Apifox Helper cache
-**/.idea/.cache/.Apifox_Helper
-**/.idea/ApifoxUploaderProjectSetting.xml
-
-# Github Copilot persisted session migrations, see: https://github.com/microsoft/copilot-intellij-feedback/issues/712#issuecomment-3322062215
-**/.idea/**/copilot.data.migration.*.xml
-
-# VS Code
+### VS Code ###
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-!.vscode/*.code-snippets
-!*.code-workspace
 
-# Built Visual Studio Code Extensions
-*.vsix
-
-# OS-specific junk
+# ------------------------------------------------------------------------------
+# SYSTEM & MISC
+# ------------------------------------------------------------------------------
+.env
 .DS_Store
 Thumbs.db
-Desktop.ini
-
-# Generic temp / logs
 *.log
 *.tmp
-*.swp
-*.swo
 *.bak
