--- a/.gitlab/ci/images/rust-runtime/Dockerfile
+++ b/.gitlab/ci/images/rust-runtime/Dockerfile
@@ -5,7 +5,7 @@ ARG RUST_VERSION
 ARG DEBIAN_SNAPSHOT=20240601T000000Z
 ARG NEXTEST_VERSION=0.9.110
 ARG LLVM_COV_VERSION=0.6.21
-ARG CARGO_AUDIT_VERSION=0.21.2
+ARG CARGO_AUDIT_VERSION=latest
 
 ENV CARGO_HOME=/home/ci/.cargo \
     RUSTUP_HOME=/home/ci/.rustup \
