Fix cargo audit for real this time.

--- a/.gitlab/ci/images/rust-runtime/Dockerfile
+++ b/.gitlab/ci/images/rust-runtime/Dockerfile
@@ -5,11 +5,13 @@ ARG RUST_VERSION
 ARG DEBIAN_SNAPSHOT=20240601T000000Z
 ARG NEXTEST_VERSION=0.9.110
 ARG LLVM_COV_VERSION=0.6.21
+ARG CARGO_AUDIT_VERSION=latest
 
 ENV CARGO_HOME=/home/ci/.cargo \
     RUSTUP_HOME=/home/ci/.rustup \
     PATH=/home/ci/.cargo/bin:$PATH \
-    CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
+    CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse \
+    CARGO_AUDIT_VERSION=$CARGO_AUDIT_VERSION
 
 WORKDIR /build
 
